# CuMesh

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cumesh/: __init__.py  bvh.py  cumesh.py  remeshing.py  xatlas.py
examples/: fill_holes.py  remesh.py  simplify.py  unify_orientations.py  utils.py  uv_unwrap.py
src/: atlas.cu  clean_up.cu  connectivity.cu  cumesh.cu  cumesh.h  dtypes.cuh  ext.cpp  geometry.cu  io.cu  shared.cu  shared.h  simplify.cu  utils.h
src/hash/: api.h  hash.cu
src/remesh/: api.h  simple_dual_contour.cu  svox2vert.cu
